packages/parser/test/parser/E0103-closure-expression.txt
a := (a: int, -> void {}
===== err =====
anonymous:1:14: ParseError: E0125 - Expected closure expression parameter name
1 | a := (a: int, -> void {}
  |              ^

anonymous:1:14: ParseError: E0103 - Expected closing parenthesis after closure expression parameters
1 | a := (a: int, -> void {}
  |              ^
